--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                             <h5 class="modal-title modal-compra-titulo">Desea finalizar la compra?</h5>
                         </div>
                         <div class="modal-body">
-                            <img id="imagen-compra" class="compra-icono" src="./recursos/img/shopping_icon.png">
+                            <img id="imagen-compra" class="compra-icono" src="/recursos/img/shopping_icon.png">
                         </div>
                         <div class="modal-footer">
                             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
