--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link REL="SHORTCUT ICON" HREF="/recursos/img/shop-ico.ico">
+    <link REL="SHORTCUT ICON" HREF="recursos/img/shop-ico.ico">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
@@ -25,7 +25,7 @@
             <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark ">
                 <div class="container-fluid">
                     <a class="navbar-brand d-flex" href="#">
-                        <img src="/recursos/img/shop-logo.png" alt="" width="30" height="24"
+                        <img src="recursos/img/shop-logo.png" alt="" width="30" height="24"
                             class="d-inline-block align-text-top">
                         <p class="tienda-texto p-0 m-0">Tienda Online</p>
                     </a>
@@ -134,7 +134,7 @@
                             <h5 class="modal-title modal-compra-titulo">Desea finalizar la compra?</h5>
                         </div>
                         <div class="modal-body">
-                            <img id="imagen-compra" class="compra-icono" src="/recursos/img/shopping_icon.png">
+                            <img id="imagen-compra" class="compra-icono" src="recursos/img/shopping_icon.png">
                         </div>
                         <div class="modal-footer">
                             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
