--- a/index.html
+++ b/index.html
@@ -108,7 +108,9 @@
                 </div>
                 <div id="btn-contenedor-carro"
                     class="d-flex align-items-center justify-content-around m-3 contenedor-boton-carrito hide">
-                    <button id="btn-comprar" onclick="ComprarCarrito()" class="btn btn-primary">Comprar
+                    <button id="btn-comprar" onclick="CancelarCompra()" class="bat-carro btn btn-danger">Cancelar
+                        Compra</button>
+                    <button id="btn-comprar" onclick="ComprarCarrito()" class="bat-carro btn btn-primary">Comprar
                         carrito</button>
                     <div class="container-fluid d-flex align-items-center justify-content-start contenedor-total-btn">
                         <p class="total-texto pa pe">Total:
@@ -144,7 +146,6 @@
                         </div>
                     </div>
                 </div>
-            </div>
         </section>
 
         <div class="container-fluid contenedor-footer">
