--- a/index.html
+++ b/index.html
@@ -152,9 +152,7 @@
             <footer class="py-3 my-4">
                 <ul class="nav justify-content-center border-bottom pb-3 mb-3">
 
-                    <p><a class="github-link" href="https://github.com/PerPab" target="_blank">Pablo Percara</a> | <a
-                            class="github-link" href="https://github.com/gastoncontrerasl" target="_blank">Gastón
-                            Contreras</a></p>
+                    <p><a class="github-link" href="https://github.com/PerPab" target="_blank">Pablo Percara</a></p>
                 </ul>
                 <p class="text-center text-body-secondary">&copy; 2024 Tienda Online</p>
             </footer>
